# akademie-flask-solution

./: README.md  pyproject.toml
diskuze/: __init__.py  config.py  data_load.py  models.py  schema.py
