[tool.poetry]
name = "akademie-flask"
version = "0.1.0"
description = ""
authors = ["Jiří Lajčok <Jiri.Lajcok@firma.seznam.cz>"]

[tool.poetry.dependencies]
Flask = "^2.2.2"
Flask-GraphQL = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
graphene = "^2.1.9"
graphene-sqlalchemy = "^2.3.0"
python = "^3.7"
SQLAlchemy = "^1.4.41"
mysqlclient = "^2.1.1"
Flask-Env = "^2.0.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
