[tool.poetry]
name = "akademie-flask"
version = "0.1.0"
description = ""
authors = ["Jiří Lajčok <jiri.lajcok@firma.seznam.cz>", "Jiří Kupka <jiri.kupka@firma.seznam.cz>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"
Flask-Env = "^2.0.0"
Flask-GraphQL = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
graphene = "^2.1.9"
graphene-sqlalchemy = "^2.3.0"
mysqlclient = "^2.1.1"
requests = "^2.28.1"
SQLAlchemy = "^1.4.41"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
